# econexyz

./: .commitlintrc.cjs  .cz.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  TODO.md  agent.20250619T194903Z.log.md  bootstrap.sh  followup.md  noxfile.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  pull_request_template.md  repo_vars.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general.md  question.yml  story.yml
.github/workflows/: _setup-repo-vars.yml  ci.yml  commit-style.yml  coverage.yml  docs.yml  labels.yml  tests.yml
agent-logs/: agent.2025-06-19.log.md  agent.20250619T190001Z.log.md  agent.20250619T204330Z.log.md  agent.20250619T204940Z.log.md  agent.20250619T210136Z.log.md  agent.20250619T211200Z.log.md  agent.20250620T000507Z.log.md  agent.20250620T010001Z.log.md  agent.20250620T011800Z.log.md  agent.20250620T012801Z.log.md  agent.20250620T012811Z.log.md  agent.20250620T012845Z.log.md  agent.20250621T210911Z.log.md
api/: openapi.yaml
config/: color_palette.json  issue_categories.yml
dashboard/api/: main.py  state.py
dashboard/vite_sample/: README.md  index.html  package-lock.json  package.json
dashboard/web/: README.md  app.js  index.html  palette.css
docs/: conf.py  github-branch-protection.md  index.md
docs/adr/: 0001-adr-process.md  0001-record-architecture-decisions.md  0002-bootstrap-sh-uv.md  0003-optional-precommit-install.md  0004-justfile-core-recipes.md  0005-devcontainer-codespaces.md  0006-hatch-workspaces.md  0007-contributor-experience-kit.md  0008-nox-runner.md  0009-bdd-property-testing.md  0010-ty-static-types.md  0011-typeguard-runtime-checks.md  0012-coverage-pytest-cov-baseline.md  0013-coverage-comment-bot.md  0014-perf-regression-guard.md  0015-ruff-lint-format.md  0016-ruff-pyupgrade-rules.md  0017-bandit-security-scan.md  0018-pip-audit-scan.md  0019-label-strategy.md  0020-baseline-gh-actions.md  0021-codeql-analysis.md  0022-trivy-sbom-scan.md  0023-gitleaks-secret-scan.md  0024-license-compliance.md  0033-tilt-dev-loop.md  (+21 more)
econexyz/: __init__.py
scripts/: adr-new  adr_lint.py  ai_helper.py  archive_sprint.py  archive_sprint.sh  close_issue.sh  commit_message.py  create_issue.py  dev_health_check.py  generate_palette_css.py  git_transaction.sh  list_workflow_diagrams.sh  pre_commit.sh  run_agents.py  run_all_tests.sh  run_dashboard.sh  run_standup.py  setup_hooks.sh  test_commit_hook.py  transaction_example.py  update_issue_dates.py
state/: sprint.json
tests/: test_addition.py  test_ai_helper.py  test_api_pagination.py  test_archive_sprint.py  test_create_issue.py  test_create_lock.py  test_csv_parser.py  test_git_transaction.py  test_issue_creator_agent.py  test_message_bus.py  test_placeholder.py  test_pre_commit_lock.py  test_sqlite_store.py  test_typeguard.py  test_update_issue_dates.py
(+156 files in other folders)
