[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econexyz"
version = "0.0.0"
description = "EcoNexyz example project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "EcoNexyz"}]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-bdd",
    "hypothesis",
    "pytest-cov",
    "schemathesis",
    "coverage",
]
dev = [
    "ruff",
    "nox",
    "pytest",
    "pytest-bdd",
    "hypothesis",
    "pytest-cov",
    "schemathesis",
    "coverage",
    "codecov",
    "typeguard",
    "ty",
    "commitizen"
]

[tool.coverage.run]
branch = true
source = ["econexyz"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.ruff]
select = ["E", "F", "UP", "I"]
line-length = 120

