[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econexyz"
version = "0.0.0"
description = "EcoNexyz example project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "EcoNexyz"}]

[project.optional-dependencies]
dev = [
    "ruff",
    "nox",
    "nox-uv",
    "pytest",
    "pytest-bdd",
    "hypothesis",
    "pytest-cov",
    "schemathesis",
    "coverage",
    "codecov",
    "typeguard",
    "ty",
    "commitizen",
    "pre-commit",
    "pip-audit"
]

[dependency-groups]
dev = [
    "nox-uv>=0.6.0",
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pytest-bdd>=8.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=6.0.0",
    "schemathesis>=4.0.0",
    "coverage>=7.0.0",
    "codecov>=2.0.0",
    "typeguard>=4.0.0",
    "ty>=0.0.1a11",
    "commitizen>=4.0.0",
    "pre-commit>=4.0.0",
    "pip-audit"
]
test = [
    "pytest",
    "pytest-bdd",
    "hypothesis",
    "pytest-cov",
    "schemathesis",
    "coverage"
]

[tool.coverage.run]
branch = true
source = ["econexyz"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.ruff]
select = ["E", "F", "UP", "I"]
line-length = 120

